[gd_scene load_steps=5 format=2]

[ext_resource path="res://Tower.gd" type="Script" id=1]
[ext_resource path="res://Area.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 14 )

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[node name="Tower" type="Node2D"]
script = ExtResource( 1 )

[node name="ShootTimer" type="Timer" parent="."]

[node name="Area" parent="." instance=ExtResource( 2 )]
identity = "tower"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource( 1 )

[node name="Range" parent="." instance=ExtResource( 2 )]
identity = "range"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="area_exited" from="Area" to="." method="_on_Area_area_exited"]
[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
